--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "antd": "^4.18.2",
     "axios": "^0.24.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
