--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
+    "@types/react-avatar-editor": "^10.3.6",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.5",
     "axios": "^0.24.0",
     "html-react-parser": "^1.4.6",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
