--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "sass": "^1.49.7",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
